@@ -1,8 +1,11 @@
 
 [autoplace-control-names]
 vulcanus_volcanism=[img=fluid.lava] Vulcano
+vulcanus_volcanism_description=Vulcane will not spawn on starting area
 holmium-ore=Homium ore
 ammonia_ocean=[img=fluid.ammoniacal-solution] Ammonia ocean
+ammonia_ocean_description=Amonia oceans will only spawn towards the north
+gleba_plants_description=Gleba plants only spawn towards the south
 
 [entity-name]
 holmium-ore=Homium ore
