@@ -267,6 +267,7 @@ data:extend({
   {
     type = "autoplace-control",
     name = "ammonia_ocean",
+    localised_description = {"autoplace-control-names.ammonia_ocean_description"},
     order = "z-ammonia",
     category = "resource",
     can_be_disabled = false
