@@ -3,6 +3,7 @@ Version: 0.1.0
 Date: 2025-01-18
   Features:
     - This version was played from finish through end
+    - Added descriptions to resources
   Bugfixes:
     - Removed startup settings which did not do anything.
 ---------------------------------------------------------------------------------------------------
